--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,278 +1,518 @@
 .main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-}
-
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
-}
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo,
-.thirteen {
-  position: relative;
-}
-
-.thirteen {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 75px;
-  height: 75px;
-  padding: 25px 10px;
-  margin-left: 16px;
-  transform: translateZ(0);
-  border-radius: var(--border-radius);
-  overflow: hidden;
-  box-shadow: 0px 2px 8px -1px #0000001a;
-}
-
-.thirteen::before,
-.thirteen::after {
-  content: '';
-  position: absolute;
-  z-index: -1;
-}
-
-/* Conic Gradient Animation */
-.thirteen::before {
-  animation: 6s rotate linear infinite;
-  width: 200%;
-  height: 200%;
-  background: var(--tile-border);
-}
-
-/* Inner Square */
-.thirteen::after {
-  inset: 0;
-  padding: 1px;
-  border-radius: var(--border-radius);
-  background: linear-gradient(
-    to bottom right,
-    rgba(var(--tile-start-rgb), 1),
-    rgba(var(--tile-end-rgb), 1)
-  );
-  background-clip: content-box;
-}
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
-}
-
-@media (prefers-reduced-motion) {
-  .thirteen::before {
-    animation: none;
-  }
-
-  .card:hover span {
-    transform: none;
-  }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     padding: 1rem;
-  }
+    min-height: 100vh;
+    background-image: url(/backgroundMountain.jpg);
+    background-size: cover;
+    color: var(--primary-color);
+}
 
-  .description p,
-  .description div {
+.aboutmain {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 1rem;
+    min-height: 100vh;
+    background-color: var(--quaternary-color);
+    color: var(--primary-color);
+}
+
+.contactmain {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 1rem;
+    min-height: 100vh;
+    background-image: url(/backgroundMountainUpsideDown.jpg);
+    background-size: cover;
+    color: var(--primary-color);
+}
+
+/* Menu Icon */
+
+
+.menuprops {
+    width:100%;
+}
+
+.burgericon {
+    margin: 50px;
+    left: 0px;
+    top: 0px;
+}
+
+.burgericon img {
+    width: 50px;
+}
+
+.popup {
+    top:5px;
+    left:20px;    
+}
+
+.popup img {
+    width: 20%;
+    position: absolute;
+    top:0px;
+    left:0px;
+}
+
+.x {
+    position: absolute;
+    left: 40px;
+    top: 60px;
+}
+
+.listitem {
+    list-style: none;
+    position: absolute;
+    left: 50px;
+    top: 4px;
+    margin: 2em;
+}
+
+.listitem li {
+    margin: 2em;
+}
+
+/* NavBar Component */
+
+.navbar {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.graudationicon img {
+    width: 15%;
+    float: right;
+    margin-right: 2em;
+}
+
+
+/* Home page */
+
+.icon {
+    padding-left: 3em;
+    padding-right: 3em;
+    margin-top: 2%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.homecont {
+    margin-left: 20%;
+    margin-top: 15%;
+}
+
+.hometitle {
+    font-size: 14pt;
+    width: 50%;
+}
+
+.line {
+    margin-top: 2em;
+    border-top: 0.3em solid;
+    border-radius: 2em;
+    color: var(--secondary-color);
+    width: 40%;
+}
+
+.hometext {
+    font-size: 14pt;
+    width: 60%;
+    margin-top: 2em;
+}
+
+.buttons button {
+    margin-right: 2em;
+    margin-top: 2em;
+    padding: 0.5em;
+    width: 8em;
+    border-radius: 0.5em;
+    font-size: 13pt;
+    border: 2px solid var(--primary-color);
+    background-color: transparent;
+    color: var(--primary-color);
+    cursor: pointer;
+}
+
+.buttons button:hover {
+    background-color: var(--primary-color);
+    color: var(--quaternary-color);
+}
+
+.arrows {
+    display: flex;
+    position: fixed;
+    bottom: 10%;
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.uparrow {
+    width: 30%;
+    margin-bottom: 1em;
+}
+
+.downarrow {
+    width: 30%;
+}
+
+/* About page */
+
+.abouthead {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    margin-top: 10%;
+}
+
+.abnouthead h1 {
+    margin: auto;
+}
+
+.aboutline {
+    margin-top: 2em;
+    border-top: 0.3em solid;
+    color: var(--primary-color);
+    width: 30%;
+    line-height: 0.1em;
+    margin-top: 1em;
+    margin-left: 4em;
+    margin-right: 4em;
+    border-radius: 3px;
+}
+
+.abouttitle {
+    display:inline-block;
+    text-align: center;
+}
+
+.aboutcont {
+    width: 100%;
+    padding-left: 15%;
+    padding-right: 15%;
+}
+
+.aboutcont > div {
+    margin-top: 1.5em;
+}
+
+.carousel {
+    margin: auto;
+}
+
+.imgcont {
+    margin: auto;
+    display: flex;
+    justify-content: space-around;
+}
+
+.imgDescription {
+    display: flex;
+    margin: auto;
+    justify-content: space-around;
+    margin-top: -120pt;
+    width:50%;
+}
+
+.leftrightarrows {
+    width: 30%;
+}
+
+.carouselImage {
+    height: 200px;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
     align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
+    margin: 40px 0px;
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
+.testOnImageHere {
+    background-color: rgba(16, 46, 53, 0.5);
+    padding: 10px;
+    margin: 0px 50px;
+    justify-content: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo,
-  .thirteen img {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+.abouthead2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    margin-top: 10%;
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+.aboutfooter {
+    margin: auto;
+    margin-top: 1.5em;
+    line-height: 3em;
+}
+
+.aboutfooter li {
+    list-style: none;
+}
+
+/* Contact page */
+
+.form {
+    line-height: 1.5em;
+}
+
+.tableborder {
+    border: 1.5px solid var(--quinary-color);
+}
+
+.contacttext {
+    margin: 5%;
+    text-align: center;
+}
+
+.formsection {
+    padding-left: 20%;
+    padding-right: 20%;
+}
+
+.tableline {
+    padding: 5%;
+    width: 100%;
+}
+
+.formbox {
+    width:100%;
+    padding: 15px;
+}
+
+.upperform,
+.lowerform {
+    width: 100%;
+    text-align: left;
+}
+
+.upperfield {
+    margin-top: 1em;
+}
+
+.formcont {
+    display:flex;
+    flex-direction: row;
+    width:100%;
+    justify-content: space-between;
+}
+
+.formeven {
+    width:50%;
+    margin-right: 1em;
+}
+
+.formcont2 {
+    display:flex;
+    flex-direction: column;
+    margin-right: 1em;
+}
+
+.formlabel {
+    display: flex;
+    flex-direction: column;
+}
+
+.input {
+    border-color: transparent;
+    width:100%; 
+}
+
+.errormsg {
+    color: rgb(196, 42, 42);
+    font-size: 12pt;
+    font-weight: 500;
+    margin-top: 0.5em;
+}
+
+.submit {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 1em;
+}
+
+.submitbutton {
+    margin-top: 1em;
+    padding: 0.5em;
+    width: 8em;
+    border-radius: 0.5em;
+    font-size: 13pt;
+    border: 2px solid var(--primary-color);
+    background-color: transparent;
+    color: var(--primary-color);
+    cursor: pointer;
+}
+
+.submitbutton:hover {
+    background-color: var(--primary-color);
+    color: var(--quinary-color);
+    cursor: pointer;
+}
+
+
+
+
+
+/* Mobile */
+
+@media (max-width: 600px) {
+
+    /* Nav bar */
+
+    .burgericon  {
+        left:0pt;
+    }
+
+    .burgericon img {
+        width: 100%;
+    }
+
+    .graudationicon img {
+        width: 30%;
+    }
+
+    /* Home  */
+    
+    .homecont {
+        margin-left: 5%;
+        margin-top: 35%;
+    }
+
+    .hometitle {
+        width: 90%;
+        font-size: 11pt;
+    }
+    
+    .line {
+        width: 85%;
+    }
+    
+    .hometext {
+        font-size: 12pt;
+        width: 80%;
+    }
+
+    /* About page */
+
+    .abouthead {
+        font-size: 8pt;
+    }
+
+    .abouttitle {
+        width:30%;
+    }
+
+    .aboutline {
+        margin-top: 2em;
+        margin-top: 1em;
+        margin-left: 2em;
+        margin-right: 2em;
+        border-radius: 3px;
+    }
+
+    .abouthead {
+        margin-top: 10%;
+    }
+
+    .abouthead2 {
+        margin-top: 20%;
+    }
+
+    .aboutfooter {
+        margin-top: 1.5em;
+    }
+
+    /* contact page */
+
+    .formsection {
+        padding-left: 10pt;
+        padding-right: 10pt;
+    }
+    
+}
+
+
+/* Tablet and iPad Air */
+@media (min-width: 601px) and (max-width: 1000px) {
+    /* Nav bar */
+    
+    .menuprops {
+        width:20%
+    }
+    
+    .burgericon  {
+        left:0pt;
+    }
+
+    .burgericon img {
+        width: 80%;
+    }
+    
+
+    .graudationicon {
+        width: 40%;
+    }
+
+    .graudationicon img {
+        width: 20%;
+    }
+
+    .popup{
+        width:40%;
+    }
+    
+    .popup img {
+        width: 40%;
+        position: absolute;
+        top:0px;
+        left:0px;
+    }
+
+    /* Home  */
+
+    .homecont {
+        margin-left: 5%;
+        margin-top: 35%;
+    }
+
+    .hometitle {
+        width: 90%;
+        font-size: 13pt;
+    }
+    
+    .line {
+        width: 85%;
+    }
+    
+    .hometext {
+        font-size: 14pt;
+        width: 80%;
+    }
+
+    /* About  */
+    .abouthead {
+        margin-top: 10pt;
+        font-size: 12pt;
+    }
+
+    /* Contact */
+    .formsection {
+        padding-left: 20pt;
+        padding-right: 20pt;
+    }
+    
 }
